# twinkle

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  Makefile.am  NEWS  README  README.md  THANKS  TODO  acinclude.m4  configure.ac  configure.in  sip.protocol  twinkle-1.9.0.ebuild  twinkle.desktop.in  twinkle.spec.in  twinkle_config.h.in
.github/workflows/: main.yml
cmake/: CheckCXX11Regex.cmake  FindCcrtp.cmake  FindCommoncpp.cmake  FindG729.cmake  FindGsm.cmake  FindIlbc.cmake  FindLibMagic.cmake  FindLibSndfile.cmake  FindSpeex.cmake  FindUcommon.cmake  FindZrtpcpp.cmake
data/: providers.csv  twinkle-console.1  twinkle.1
m4/: vl_lib_readline.m4
src/: CMakeLists.txt  Makefile.am  abstract_dialog.cpp  abstract_dialog.h  address_book.cpp  address_book.h  auth.cpp  auth.h  call_history.cpp  call_history.h  call_script.cpp  call_script.h  client_request.cpp  client_request.h  cmd_socket.cpp  cmd_socket.h  dialog.cpp  dialog.h  diamondcard.cpp  diamondcard.h  epa.cpp  epa.h  events.cpp  events.h  exceptions.h  id_object.cpp  id_object.h  line.cpp  line.h  listener.cpp  listener.h  log.cpp  log.h  main.cpp  phone.cpp  phone.h  phone_user.cpp  phone_user.h  prohibit_thread.cpp  prohibit_thread.h  (+33 more)
src/audio/: CMakeLists.txt  Makefile.am  audio_codecs.cpp  audio_codecs.h  audio_decoder.cpp  audio_decoder.h  audio_device.cpp  audio_device.h  audio_encoder.cpp  audio_encoder.h  audio_rx.cpp  audio_rx.h  audio_session.cpp  audio_session.h  audio_tx.cpp  audio_tx.h  dtmf_player.cpp  dtmf_player.h  freq_gen.cpp  freq_gen.h  g711.cpp  g711.h  g721.cpp  g722_local.h  g723_16.cpp  g723_24.cpp  g723_40.cpp  g72x.cpp  g72x.h  media_buffer.cpp  media_buffer.h  rtp_telephone_event.cpp  rtp_telephone_event.h  tone_gen.cpp  tone_gen.h  twinkle_rtp_session.cpp  twinkle_rtp_session.h  twinkle_zrtp_ui.cpp  twinkle_zrtp_ui.h
src/audio/gsm/: Makefile.am
src/audio/gsm/inc/: config.h
src/audio/gsm/src/: CMakeLists.txt  code.cpp  debug.cpp
src/audio/sources/: audio_source.h  audio_source_rtp.cpp  audio_source_rtp.h  audio_source_silence.cpp  audio_source_silence.h
src/audits/: CMakeLists.txt  Makefile.am  memman.cpp  memman.h
src/gui/: CMakeLists.txt  address_finder.cpp  address_finder.h  addresscardform.cpp  addresscardform.h  addresscardform.ui  addresscardform.ui.h  addresslistviewitem.cpp  addresslistviewitem.h  addresstablemodel.cpp  addresstablemodel.h  akonadiaddressbook.cpp  akonadiaddressbook.h  authenticationform.cpp  authenticationform.h  authenticationform.ui  authenticationform.ui.h  buddyform.cpp  buddyform.h  buddyform.ui  buddyform.ui.h  buddylistview.cpp  buddylistview.h  command_args.h  core_strings.h  deregisterform.cpp  deregisterform.h  deregisterform.ui  deregisterform.ui.h  diamondcardprofileform.cpp  diamondcardprofileform.h  diamondcardprofileform.ui  diamondcardprofileform.ui.h  dtmfform.cpp  dtmfform.h  dtmfform.ui  dtmfform.ui.h  freedesksystray.cpp  freedesksystray.h  getaddressform.cpp  (+110 more)
src/gui/lang/: Makefile.am  twinkle_cs.ts  twinkle_de.ts  twinkle_fr.ts  twinkle_nl.ts  twinkle_ru.ts  twinkle_sk.ts  twinkle_sv.ts  twinkle_xx.ts
src/gui/qml/: ImageButton.qml  TextImageButton.qml  incoming_call.qml  osd.qml  qml.qrc
src/im/: CMakeLists.txt  Makefile.am  im_iscomposing_body.cpp  im_iscomposing_body.h  msg_session.cpp  msg_session.h
src/mwi/: CMakeLists.txt  Makefile.am  mwi.cpp  mwi.h  mwi_dialog.cpp  mwi_dialog.h  mwi_subscription.cpp  mwi_subscription.h  simple_msg_sum_body.cpp  simple_msg_sum_body.h
src/parser/: CMakeLists.txt  Makefile.am  challenge.cpp  challenge.h  coding.cpp  coding.h  credentials.cpp  credentials.h  definitions.cpp  definitions.h  hdr_accept.cpp  hdr_accept.h  hdr_accept_encoding.cpp  hdr_accept_encoding.h  hdr_accept_language.cpp  hdr_accept_language.h  hdr_alert_info.cpp  hdr_alert_info.h  hdr_allow.cpp  hdr_allow.h  hdr_allow_events.cpp  hdr_allow_events.h  hdr_auth_info.cpp  hdr_auth_info.h  hdr_authorization.cpp  hdr_authorization.h  hdr_call_id.cpp  hdr_call_id.h  hdr_call_info.cpp  hdr_call_info.h  hdr_contact.cpp  hdr_contact.h  hdr_content_disp.cpp  hdr_content_disp.h  hdr_content_encoding.cpp  hdr_content_encoding.h  hdr_content_language.cpp  hdr_content_language.h  hdr_content_length.cpp  hdr_content_length.h  (+122 more)
src/patterns/: CMakeLists.txt  Makefile.am  observer.cpp  observer.h
src/presence/: CMakeLists.txt  Makefile.am  buddy.cpp  buddy.h  pidf_body.cpp  pidf_body.h  presence_dialog.cpp  presence_dialog.h  presence_epa.cpp  presence_epa.h  presence_state.cpp  presence_state.h  presence_subscription.cpp  presence_subscription.h
src/sdp/: CMakeLists.txt  Makefile.am  sdp.cpp  sdp.h  sdp_parse_ctrl.cpp  sdp_parse_ctrl.h  sdp_parser.h  sdp_parser.yxx  sdp_scanner.cxx  sdp_scanner.lxx
src/sockets/: CMakeLists.txt  Makefile.am  connection.cpp  connection.h  connection_table.cpp  connection_table.h  dnssrv.cpp  dnssrv.h  interfaces.cpp  interfaces.h  ipaddr.h  socket.cpp  socket.h  url.cpp  url.h
src/stun/: CMakeLists.txt  Makefile.am  stun.cxx  stun.h  stun_transaction.cpp  stun_transaction.h  udp.cxx  udp.h
src/threads/: CMakeLists.txt  Makefile.am  mutex.cpp  mutex.h  sema.cpp  sema.h  thread.cpp  thread.h
src/utils/: CMakeLists.txt  Makefile.am  file_utils.cpp  file_utils.h  mime_database.cpp  mime_database.h  record_file.h  record_file.hpp
